[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { path = "quinn/quinn" }
webtransport-quinn = { path = "webtransport-rs/webtransport-quinn" }
rustls-pemfile = "1"
rustls = "0.21"
tokio = { version = "1.32.0", features = ["full"]}
